--- a/Fitness_club/Fitness_club.csproj
+++ b/Fitness_club/Fitness_club.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Abonement.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="bd_connection.cs" />
     <Compile Include="Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
