Abra Kadabra ystala

--- a/Fitness_club/Fitness_club.csproj
+++ b/Fitness_club/Fitness_club.csproj
@@ -72,6 +72,9 @@
     <Compile Include="Client.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Kabinet.xaml.cs">
+      <DependentUpon>Kabinet.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -98,6 +101,10 @@
     <Compile Include="Zal.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Page Include="Kabinet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="login_form.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
